--- a/style.css
+++ b/style.css
@@ -10,6 +10,7 @@ body {
     font-family: "gotham-medium";
     color: white;
     /*background-color: #152238;*/
+    background-color: rgb(6, 19, 41)
 }
 
 .main-page {
@@ -46,7 +47,8 @@ body {
     background-image: linear-gradient(#243147, #0b1928);
     height: 200px;
     padding-left: 35px;
-    font-size: 40px;
+    font-size: 65px;
+    padding-bottom: 50px;
 }
 
 .nav-bar {
@@ -66,13 +68,48 @@ body {
 	border: none;
 }
 
-.all-books {
+.library {
     background-color: rgb(11, 25, 40);
     flex: 1;
     padding-left: 35px;
+    display: flex;
+    flex-direction: row;
+    gap: 50px;
 }
 
 .sub-heading {
     margin: 0;
     padding: 0;
+}
+
+.blur {
+    filter: blur(15px);
+    pointer-events: none;
+    user-select: none;
+    transition: 0.25s;
+}
+
+.form-box {
+    width: 650px;
+    height: 650px;
+    background-color: white;
+    position: absolute;
+    margin: 0;
+    top: 50%;
+    left: 50%;
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%);
+    color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 20px;
+    transition: 0.1s;
+}
+
+.form-title {
+    font-size: 35px;
+    text-decoration: none;
+    font-weight: normal;
+    margin: 0;
 }
