--- a/style.css
+++ b/style.css
@@ -72,10 +72,48 @@ body {
 .library {
     background-color: rgb(11, 25, 40);
     flex: 1;
-    padding-left: 35px;
+    padding: 0 35px 35px 35px;
+    display: flex;
+    flex-direction: column;
+}
+
+.library .headers {
     display: flex;
     flex-direction: row;
     gap: 50px;
+}
+
+.library .book-area {
+    margin-top: 40px;
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 45px;
+}
+
+.book-holder {
+    width: 200px;
+    height: 240px;
+    background-color: #243147;
+    padding: 22px;
+    color: white;
+    text-align: center;
+    word-wrap: break-word;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.book {
+    width: 100%;
+    height: 200px;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    word-wrap: break-word;
+    text-align: center;
 }
 
 .sub-heading {
