--- a/style.css
+++ b/style.css
@@ -112,7 +112,6 @@ body {
 }
 
 .book {
-    width: 100%;
     height: 200px;
     display: flex;
     flex-direction: row;
@@ -120,6 +119,33 @@ body {
     align-items: center;
     word-wrap: break-word;
     text-align: center;
+}
+
+.book:hover {
+    cursor: pointer;
+}
+
+.book.active {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+    justify-content: space-between;
+    gap: 15px;
+    text-align: left;
+}
+
+.info-area {
+    display: flex;
+    flex-direction: column;
+    gap: 7px;
+    padding: 10px;
+}
+
+.options-area {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 10px;
 }
 
 .sub-heading {
