--- a/style.css
+++ b/style.css
@@ -111,6 +111,35 @@ body {
     justify-content: space-between;
 }
 
+.book-holder .bottom-area {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.book-holder .bottom-area .read-circle {
+    height: 10px;
+    width: 10px;
+    background-color: forestgreen;
+    border-radius: 50%;
+}
+
+.book-holder .bottom-area .options-icon {
+    display: flex;
+    flex-direction: column;
+    gap: 2px;
+    cursor: pointer;
+    padding-left: 5px;
+}
+
+.options-icon .small-dot {
+    height: 4px;
+    width: 4px;
+    background-color: white;
+    border-radius: 50%;
+}
+
 .book {
     height: 200px;
     display: flex;
@@ -132,6 +161,7 @@ body {
     justify-content: space-between;
     gap: 15px;
     text-align: left;
+    background-color: rgb(6, 19, 41);
 }
 
 .info-area {
@@ -139,6 +169,8 @@ body {
     flex-direction: column;
     gap: 7px;
     padding: 10px;
+    pointer-events: none;
+    user-select: none;
 }
 
 .options-area {
@@ -146,6 +178,8 @@ body {
     flex-direction: row;
     justify-content: space-between;
     padding: 10px;
+    pointer-events: none;
+    user-select: none;
 }
 
 .sub-heading {
