Did some good work on the drop down options menu. However, since adding it, I have a weird glitch where the scroll down menu appears (when i didn't do anything). However, when I click on the 3 dots, the scroll menu will go away. Have to look into this.

--- a/style.css
+++ b/style.css
@@ -140,6 +140,32 @@ body {
     border-radius: 50%;
 }
 
+.options-menu {
+    /*width: 200px;*/
+    /*height: 230px;*/
+    background-color: rgb(21, 34, 56);
+    position: absolute;
+    visibility: hidden;
+    display: flex;
+    flex-direction: column;
+    /*padding: 0 20px;*/
+}
+
+.options-menu.active {
+    visibility: visible;
+}
+
+.options-menu.active .option {
+    height: 30px;
+    color: white;
+    font-size: 20px;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    padding: 10px 20px;
+    cursor: pointer;
+}
+
 .book {
     height: 200px;
     display: flex;
