--- a/style.css
+++ b/style.css
@@ -39,8 +39,7 @@ body {
     flex: 1;
     display: flex;
     flex-direction: column;
-    /*Maybe add an overflow y to either this or the children*/
-    /*overflow-y: scroll;*/
+    overflow-y: scroll;
 }
 
 .top-bar {
@@ -141,14 +140,13 @@ body {
 }
 
 .options-menu {
-    /*width: 200px;*/
-    /*height: 230px;*/
     background-color: rgb(21, 34, 56);
     position: absolute;
+    top: 40%;
+    left: 50%;
     visibility: hidden;
     display: flex;
     flex-direction: column;
-    /*padding: 0 20px;*/
 }
 
 .options-menu.active {
